Added USB Mass Storage fix (e400-mass-storage-device-fix-gellmar.patch)
For full support, also use kernel patch and vold patch

--- a/init.e0.rc
+++ b/init.e0.rc
@@ -115,6 +115,11 @@ on post-fs-data
     chmod 0771 /data/logger
     # Log Service [END]
 
+    chown system system /sys/class/android_usb/android0/f_mass_storage/lun0/file
+    chmod 0660 /sys/class/android_usb/android0/f_mass_storage/lun0/file
+    chown system system /sys/class/android_usb/android0/f_mass_storage/lun1/file
+    chmod 0660 /sys/class/android_usb/android0/f_mass_storage/lun1/file
+
 on boot
     chown bluetooth bluetooth /sys/module/bluetooth_power/parameters/power
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
