--- a/init.e0.rc
+++ b/init.e0.rc
@@ -201,6 +201,10 @@ on boot
     chown system /sys/devices/platform/rs300100a7.65536/force_sync
     chown system /sys/devices/platform/rs300100a7.65536/sync_sts
     chown system /sys/devices/system/cpu/cpufreq/ondemand/io_is_busy
+    
+# Fix ipconfig for wifi
+    touch /data/misc/wifi/ipconfig.txt
+    chmod 0777 /data/misc/wifi/ipconfig.txt
 
 # Fix FFC
     write /proc/sys/kernel/randomize_va_space 1
